# Glimt

./: .gitignore  README.md  components.json  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
src/: app.tsx  capture-app.tsx  index.css  indicator-app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: compact-vu-meter.tsx  error-boundary.tsx  markdown-editor.tsx  markdown-renderer.tsx
src/components/ui/: badge.tsx  collapsible.tsx  command.tsx  dialog.tsx  scroll-area.tsx  sonner.tsx  switch.tsx  tooltip.tsx
src/features/capture/: compact-capture-window.tsx
src/features/dashboard/: dashboard.tsx
src/features/indicator/: recording-pill.tsx
src/features/settings/: model-manager.tsx  settings.tsx  update-checker.tsx
src/lib/: app-context.tsx  db.ts  embedding-codec.ts  export-service.ts  export.ts  migrations.ts  search.ts  shortcut.ts  storage-keys.ts  types.ts  updater.ts  use-audio-recording.ts  utils.ts
src/lib/__tests__/: cosine-similarity.test.ts  embedding-codec.test.ts  export.test.ts  migrations.test.ts  search.test.ts
src/lib/ai/: embeddings.ts  model-lifecycle.ts  models.ts  title-generation.ts  title-prompt.ts  whisper.ts
src/lib/hooks/: use-auto-update.ts  use-database.ts  use-idea-actions.ts  use-model-lifecycle.ts  use-model-notifications.ts  use-theme.ts
src/workers/: embedding.worker.ts  title.worker.ts  transcription.worker.ts
(+1 files in other folders)
