[package]
name = "glimt"
version = "0.1.0"
description = "Local-first idea capture app"
authors = ["Glimt Contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "glimt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-autostart = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
